objects/Value_Type__c.object
<CustomObject>
    <description>This object holds the definitions of the different attributes that can be assigned to a Contact via Staff Attribute.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjustment__c</fullName>
        <inlineHelpText>Only applicable to Goals-related values</inlineHelpText>
        <label>Adjustment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Position Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Title</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>VT{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Staff member may have multiple, non-overlapping records for this attribute</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Staff member may have only one record for this attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff member may have unlimited, overlapping records for this attribute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff member may have only one record associated with this category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff member may have multiple, non-overlapping records for this category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_As_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Name is used as the assigned value for any associated Staff Attribute.</description>
        <inlineHelpText>When checked, the Name is used as the assigned value for any associated Staff Attribute.</inlineHelpText>
        <label>Use As Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Values_Permitted__c</fullName>
        <label>Values Permitted</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Value Type</label>
    <listViews>
        <fullName>Active_Business_Title</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Business Title</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Business Title</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Department</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Department</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Department</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Incentive_Role</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Incentive Role</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Incentive Role</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Other</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Other</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Position_Details</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Adjustment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Position Details</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Position Details</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Use_As_Value</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Rule__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Values_Permitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Use_As_Value__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Use As Value</label>
    </listViews>
    <listViews>
        <fullName>Active_Value_Types</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Use_As_Value__c</columns>
        <columns>Rule__c</columns>
        <columns>Values_Permitted__c</columns>
        <columns>Adjustment__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Value Types</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Value Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Types</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Category_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    ISBLANK(TEXT(Category__c)),
    ISNULL(TEXT(Category__c))
)</errorConditionFormula>
        <errorDisplayField>Category__c</errorDisplayField>
        <errorMessage>You must indicate a Value Type category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Permitted_Values_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
	ISBLANK(Values_Permitted__c),
        AND(
            INCLUDES(Values_Permitted__c, &apos;Program Collection&apos;),
            OR(
                INCLUDES(Values_Permitted__c, &apos;Date&apos;),
		INCLUDES(Values_Permitted__c, &apos;Number&apos;),
		INCLUDES(Values_Permitted__c, &apos;Percentage&apos;),
		INCLUDES(Values_Permitted__c, &apos;Text&apos;),
                INCLUDES(Values_Permitted__c, &apos;Checkbox&apos;)
            )
        )
)</errorConditionFormula>
        <errorDisplayField>Values_Permitted__c</errorDisplayField>
        <errorMessage>You must indicate the type(s) of values that can be recorded against this Value Type.</errorMessage>
    </validationRules>
</CustomObject>